Updated buttons title.

--- a/middle/mindex.html
+++ b/middle/mindex.html
@@ -97,7 +97,7 @@
         </div>
       </fieldset>
       <div id="educations"></div>
-      <div class="d-flex p-3">
+      <div class="d-flex p-3 no-print">
         <button
           class="d-flex border items-center justify-center rounded-button cursor-pointer relative box-content transition-colors duration-150 overflow-hidden max-w-full focus-visible:ring-4 ring-brand bg-transparent active:bg-brand-100 not-touch:active:bg-brand-100 text-gray-700 border-gray-400 not-touch:hover:bg-brand-50 not-touch:hover:border-brand-400 font-medium py-1 ps-1 pe-3 text-base"
           type="button"
@@ -140,7 +140,7 @@
           </table>
         </fieldset>
         <div id="employments"></div>
-      <div class="d-flex p-3">
+      <div class="d-flex p-3 no-print">
         <button
           class="d-flex border items-center justify-center rounded-button cursor-pointer relative box-content transition-colors duration-150 overflow-hidden max-w-full focus-visible:ring-4 ring-brand bg-transparent active:bg-brand-100 not-touch:active:bg-brand-100 text-gray-700 border-gray-400 not-touch:hover:bg-brand-50 not-touch:hover:border-brand-400 font-medium py-1 ps-1 pe-3 text-base"
           type="button"
@@ -183,7 +183,7 @@
           type="submit"
           onclick="window.print()"
           name="submit"
-          value="SUBMIT"
+          value="PRINT"
         />
       </div>
     </form>
