--- a/middle/mindex.html
+++ b/middle/mindex.html
@@ -4,7 +4,6 @@
     <title>Input Image</title>
     <link rel="stylesheet" type="text/css" href="mstyle.css" />
     <link rel="stylesheet" type="text/css" href="bootstrap.css" />
-
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style type="text/css" media="print">
@@ -29,7 +28,7 @@
           <b>Personal Details</b>
         </legend>
         <div class="sss">
-          <table class="first" border="0">
+          <table class="first">
             <tr>
               <td>Name</td>
               <td colspan="4"><input type="text" name="name" value="" /></td>
@@ -126,7 +125,7 @@
           <legend style="text-transform: uppercase; font-size: 20px">
             <b>Employment</b>
           </legend>
-          <table width="100%" border="0">
+          <table width="100%">
             <tr>
               <td>Company Name <input type="text" name="name" value="" /></td>
               <td>Post</td>
@@ -167,7 +166,7 @@
           <textarea rows="5" cols="80"> </textarea>
         </fieldset>
       </div>
-      <div></div>
+      <nav class="btn">
       <div class="key no-print">
         <input
           type="reset"
@@ -186,6 +185,7 @@
           value="PRINT"
         />
       </div>
+      </nav>
     </form>
     <!-- <button class="inline-flex border items-center justify-center rounded-button cursor-pointer relative box-content transition-colors duration-150 overflow-hidden max-w-full focus-visible:ring-4 ring-brand bg-transparent active:bg-brand-100 not-touch:active:bg-brand-100 text-gray-700 border-gray-400 not-touch:hover:bg-brand-50 not-touch:hover:border-brand-400 font-medium py-1 ps-1 pe-3 text-base" type="button" style="outline: none;"><svg xmlns="http://www.w3.org/2000/svg" viewBox="2 2 16 16" fill="currentColor" class="px-0.5 flex-shrink-0 box-content h-6 w-5"><path fill-rule="evenodd" d="M10 5a1 1 0 0 1 1 1v3h3a1 1 0 1 1 0 2h-3v3a1 1 0 1 1-2 0v-3H6a1 1 0 1 1 0-2h3V6a1 1 0 0 1 1-1z" clip-rule="evenodd"></path></svg><div class="truncate h-6 ms-0.5 ">Add education</div></button> -->
     <script type="text/JavaScript">
