--- a/middle/mindex.html
+++ b/middle/mindex.html
@@ -31,16 +31,16 @@
           <table class="first">
             <tr>
               <td>Name</td>
-              <td colspan="4"><input type="text" name="name" value="" /></td>
+              <td colspan="4"><input autocomplete="off" type="text" name="name" value="" /></td>
             </tr>
             <tr>
               <td>Father's Name</td>
-              <td colspan="4"><input type="text" name="name" value="" /></td>
+              <td colspan="4"><input autocomplete="off" type="text" name="name" value="" /></td>
               <td>
                 <div class="img">
                   <div class="profile-pic-div">
                     <img src="./image.jpg" id="photo" />
-                    <input type="file" id="file" />
+                    <input autocomplete="off" type="file" id="file" />
                     <label for="file" id="uploadBtn">Choose Photo</label>
                     <h1>Upload Photo</h1>
                   </div>
@@ -50,47 +50,47 @@
             </tr>
             <tr>
               <td>Mother's Name</td>
-              <td colspan="4"><input type="text" name="name" value="" /></td>
+              <td colspan="4"><input autocomplete="off" type="text" name="name" value="" /></td>
             </tr>
             <tr>
               <td>Date of Birth</td>
-              <td colspan="4"><input type="date" name="date" value="" /></td>
+              <td colspan="4"><input autocomplete="off" type="date" name="date" value="" /></td>
             </tr>
             <tr>
               <td>Gmail</td>
               <td colspan="4">
-                <input type="alphanumeric" name="name" value="" />
+                <input autocomplete="off" type="alphanumeric" name="name" value="" />
               </td>
             </tr>
             <tr>
               <td>Mobile No.</td>
               <td colspan="4">
-                <input type="Numeric" name="numeric" value="" />
+                <input autocomplete="off" type="Numeric" name="numeric" value="" />
               </td>
             </tr>
             <tr>
               <td>Address</td>
               <td colspan="4">
-                <input type="alphanumeric" name="name" value="" />
+                <input autocomplete="off" type="alphanumeric" name="name" value="" />
               </td>
             </tr>
             <tr>
               <td>Gender</td>
               <td colspan="2">
-                <input type="checkbox" name="gender" value="Male" />Male
+                <input autocomplete="off" type="checkbox" name="gender" value="Male" />Male
               </td>
               <td colspan="2">
-                <input type="checkbox" name="gender" value="Male" />Female
+                <input autocomplete="off" type="checkbox" name="gender" value="Male" />Female
               </td>
             </tr>
             <tr>
               <td>Caste</td>
               <td>
-                <input type="checkbox" name="caste" value="Male" />General
+                <input autocomplete="off" type="checkbox" name="caste" value="Male" />General
               </td>
-              <td><input type="checkbox" name="caste" value="Male" />OBC</td>
-              <td><input type="checkbox" name="caste" value="Male" />SC</td>
-              <td><input type="checkbox" name="caste" value="Male" />ST</td>
+              <td><input autocomplete="off" type="checkbox" name="caste" value="Male" />OBC</td>
+              <td><input autocomplete="off" type="checkbox" name="caste" value="Male" />SC</td>
+              <td><input autocomplete="off" type="checkbox" name="caste" value="Male" />ST</td>
             </tr>
           </table>
         </div>
@@ -127,13 +127,13 @@
           </legend>
           <table width="100%">
             <tr>
-              <td>Company Name <input type="text" name="name" value="" /></td>
+              <td>Company Name <input autocomplete="off" type="text" name="name" value="" /></td>
               <td>Post</td>
-              <td><input type="text" name="name" value="" /></td>
+              <td><input autocomplete="off" type="text" name="name" value="" /></td>
               <td>Period</td>
               <td>
-                <input type="date" name="name" value="" /> To
-                <input type="date" name="name" value="" />
+                <input autocomplete="off" type="date" name="name" value="" /> To
+                <input autocomplete="off" type="date" name="name" value="" />
               </td>
             </tr>
           </table>
@@ -208,9 +208,9 @@
                   <option value="Other">Other</option>
                 </select>
               </td>
-              <td>Level <input type="text" name="level" value="" /></td>
-              <td>Passing Year<input type="numeric" name="year" value="" /></td>
-              <td>Roll No.<input type="numeric" name="roll" value="" /></td>
+              <td>Level <input autocomplete="off" type="text" name="level" value="" /></td>
+              <td>Passing Year<input autocomplete="off" type="numeric" name="year" value="" /></td>
+              <td>Roll No.<input autocomplete="off" type="numeric" name="roll" value="" /></td>
             </tr>
           </table>
         </fieldset>`;
@@ -225,13 +225,13 @@
           </legend>
           <table width="100%" border="0">
             <tr>
-              <td>Company Name <input type="text" name="name" value="" /></td>
+              <td>Company Name <input autocomplete="off" type="text" name="name" value="" /></td>
               <td>Post</td>
-              <td><input type="text" name="name" value="" /></td>
+              <td><input autocomplete="off" type="text" name="name" value="" /></td>
               <td>Period</td>
               <td>
-                <input type="date" name="name" value="" /> To
-                <input type="date" name="name" value="" />
+                <input autocomplete="off" type="date" name="name" value="" /> To
+                <input autocomplete="off" type="date" name="name" value="" />
               </td>
             </tr>
           </table>
